# lib/db/src/schema/players.ts
@@ -56,6 +56,10 @@ export const playersTable = pgTable("players", {
   passportCopyReviewed: boolean("passport_copy_reviewed").default(false).notNull(),
   passportCopyUploadedAt: timestamp("passport_copy_uploaded_at"),
   passportCopyUploadedIsUpdate: boolean("passport_copy_uploaded_is_update").default(false).notNull(),
+  hkidCopyUrl: text("hkid_copy_url"),
+  hkidCopyReviewed: boolean("hkid_copy_reviewed").default(false).notNull(),
+  hkidCopyUploadedAt: timestamp("hkid_copy_uploaded_at"),
+  hkidCopyUploadedIsUpdate: boolean("hkid_copy_uploaded_is_update").default(false).notNull(),
   instagramHandle: text("instagram_handle"),
   facebookHandle: text("facebook_handle"),
   travelNote: text("travel_note"),
